test/corpus/generated-legacy.txt
================================================================================
openCypher-legacy.txt: 0
================================================================================

CREATE ()

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (create
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern)))))))))))))

================================================================================
openCypher-legacy.txt: 1
================================================================================

CREATE( )

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (create
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern)))))))))))))

================================================================================
openCypher-legacy.txt: 2
================================================================================

CYPHER 3.0 MATCH (n) RETURN n

--------------------------------------------------------------------------------

(cypher
  (query_options
    (cypher_option
      (regular_decimal_real)))
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

================================================================================
openCypher-legacy.txt: 3
================================================================================

CREATE (n:Person { name : 'Andres', title : 'Developer' })

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (updating_clause
              (create
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))))
                          (properties
                            (map_literal
                              (property_key_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (expression
                                (atom
                                  (literal
                                    (string_literal))))
                              (property_key_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (expression
                                (atom
                                  (literal
                                    (string_literal)))))))))))))))))))

================================================================================
openCypher-legacy.txt: 4
================================================================================

MATCH (node1:Label1)

WHERE node1.propertyA = {value}

RETURN node2.propertyA, node2.propertyB

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))))))
                (where
                  (expression
                    (comparison_expression
                      (expression
                        (property_or_labels_expression
                          (expression
                            (atom
                              (variable
                                (symbolic_name
                                  (unescaped_symbolic_name)))))
                          (property_lookup
                            (property_key_name
                              (schema_name
                                (symbolic_name
                                  (unescaped_symbolic_name)))))))
                      (expression
                        (atom
                          (legacy_parameter
                            (symbolic_name
                              (unescaped_symbolic_name))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (property_or_labels_expression
                        (expression
                          (atom
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))
                        (property_lookup
                          (property_key_name
                            (schema_name
                              (symbolic_name
                                (unescaped_symbolic_name))))))))
                  (projection_item
                    (expression
                      (property_or_labels_expression
                        (expression
                          (atom
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))
                        (property_lookup
                          (property_key_name
                            (schema_name
                              (symbolic_name
                                (unescaped_symbolic_name)))))))))))))))))

================================================================================
openCypher-legacy.txt: 5
================================================================================

MATCH (tom:Person)-[:ACTED_IN]->(tomHanksMovies) RETURN tom

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

================================================================================
openCypher-legacy.txt: 6
================================================================================

MATCH (tom:Person)  -[:ACTED_IN]->(tomHanksMovies) RETURN tom

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

================================================================================
openCypher-legacy.txt: 7
================================================================================

MATCH (tom:Person  )-[:ACTED_IN]->(tomHanksMovies) RETURN tom

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (node_labels
                            (node_label
                              (label_name
                                (schema_name
                                  (symbolic_name
                                    (unescaped_symbolic_name)))))))
                        (pattern_element_chain
                          (relationship_pattern
                            (dash)
                            (relationship_detail
                              (relationship_types
                                (rel_type_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (dash)
                            (right_arrow_head))
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

================================================================================
openCypher-legacy.txt: 8
================================================================================

match(n)return n        

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (single_part_query
            (reading_clause
              (match
                (pattern
                  (pattern_part
                    (anonymous_pattern_part
                      (pattern_element
                        (node_pattern
                          (variable
                            (symbolic_name
                              (unescaped_symbolic_name))))))))))
            (return
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))))))))))))

================================================================================
openCypher-legacy.txt: 9
================================================================================

WITH range(2011, 2014) AS years, range(1,12) as months
FOREACH(year IN years |
  MERGE (y:Year {year: year})
  FOREACH(month IN months |
    CREATE (m:Month {month: month})
    MERGE (y)-[:HAS_MONTH]->(m)
    FOREACH(day IN (CASE
                      WHEN month IN [1,3,5,7,8,10,12] THEN range(1,31)
                      WHEN month = 2 THEN
                        CASE
                          WHEN year % 4 <> 0 THEN range(1,28)
                          WHEN year % 100 <> 0 THEN range(1,29)
                          WHEN year % 400 <> 0 THEN range(1,29)
                          ELSE range(1,28)
                        END
                      ELSE range(1,30)
                    END) |
      CREATE (dd:Day {day: day})
      MERGE (m)-[:HAS_DAY]->(dd))))

WITH *

MATCH (year:Year)-[:HAS_MONTH]->(month)-[:HAS_DAY]->(day)
WITH year,month,day
ORDER BY year.year, month.month, day.day
WITH collect(day) as days
FOREACH(i in RANGE(0, length(days) - 2) |
    FOREACH(day1 in [days[i]] |
        FOREACH(day2 in [days[i + 1]] |
            CREATE UNIQUE (day1)-[:NEXT]->(day2))))

--------------------------------------------------------------------------------

(cypher
  (statement
    (query
      (regular_query
        (single_query
          (multi_part_query
            (with
              (projection_body
                (projection_items
                  (projection_item
                    (expression
                      (atom
                        (function_invocation
                          (function_name
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer))))))
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer)))))))))
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name))))
                  (projection_item
                    (expression
                      (atom
                        (function_invocation
                          (function_name
                            (symbolic_name
                              (unescaped_symbolic_name)))
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer))))))
                          (expression
                            (atom
                              (literal
                                (number_literal
                                  (integer_literal
                                    (decimal_integer)))))))))
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))))))
            (updating_clause
              (for_each
                (variable
                  (symbolic_name
                    (unescaped_symbolic_name)))
                (expression
                  (atom
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))))
                (updating_clause
                  (merge
                    (pattern_part
                      (anonymous_pattern_part
                        (pattern_element
                          (node_pattern
                            (variable
                              (symbolic_name
                                (unescaped_symbolic_name)))
                            (node_labels
                              (node_label
                                (label_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))
                            (properties
                              (map_literal
                                (property_key_name
                                  (schema_name
                                    (symbolic_name
                                      (unescaped_symbolic_name))))
                                (expression
                                  (atom
                                    (variable
                                      (symbolic_name
                                        (unescaped_symbolic_name)))))))))))))
                (updating_clause
                  (for_each
                    (variable
                      (symbolic_name
                        (unescaped_symbolic_name)))
                    (expression
                      (atom
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))))
                    (updating_clause
                      (create
                        (pattern
                          (pattern_part
                            (anonymous_pattern_part
                              (pattern_element
                                (node_pattern
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name)))
                                  (node_labels
                                    (node_label
                                      (label_name
                                        (schema_name
                                          (symbolic_name
                                            (unescaped_symbolic_name))))))
                                  (properties
                                    (map_literal
                                      (property_key_name
                                        (schema_name
                                          (symbolic_name
                                            (unescaped_symbolic_name))))
                                      (expression
                                        (atom
                                          (variable
                                            (symbolic_name
                                              (unescaped_symbolic_name))))))))))))))
                    (updating_clause
                      (merge
                        (pattern_part
                          (anonymous_pattern_part
                            (pattern_element
                              (node_pattern
                                (variable
                                  (symbolic_name
                                    (unescaped_symbolic_name))))
                              (pattern_element_chain
                                (relationship_pattern
                                  (dash)
                                  (relationship_detail
                                    (relationship_types
                                      (rel_type_name
                                        (schema_name
                                          (symbolic_name
                                            (unescaped_symbolic_name))))))
                                  (dash)
                                  (right_arrow_head))
                                (node_pattern
                                  (variable
                                    (symbolic_name
                                      (unescaped_symbolic_name))))))))))
                    (updating_clause
                      (for_each
                        (variable
                          (symbolic_name
                            (unescaped_symbolic_name)))
                        (expression
                          (atom
                            (parenthesized_expression
                              (expression
                                (atom
                                  (case_expression
                                    (case_alternatives
                                      (expression
                                        (string_list_null_predicate_expression
                                          (expression
                                            (atom
                                              (variable
                                                (symbolic_name
                                                  (unescaped_symbolic_name)))))
                                          (list_predicate_expression
                                            (expression
                                              (atom
                                                (literal
                                                  (list_literal
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer)))))))))))))
                                      (expression
                                        (atom
                                          (function_invocation
                                            (function_name
                                              (symbolic_name
                                                (unescaped_symbolic_name)))
                                            (expression
                                              (atom
                                                (literal
                                                  (number_literal
                                                    (integer_literal
                                                      (decimal_integer))))))
                                            (expression
                                              (atom
                                                (literal
                                                  (number_literal
                                                    (integer_literal
                                                      (decimal_integer))))))))))
                                    (case_alternatives
                                      (expression
                                        (comparison_expression
                                          (expression
                                            (atom
                                              (variable
                                                (symbolic_name
                                                  (unescaped_symbolic_name)))))
                                          (expression
                                            (atom
                                              (literal
                                                (number_literal
                                                  (integer_literal
                                                    (decimal_integer))))))))
                                      (expression
                                        (atom
                                          (case_expression
                                            (case_alternatives
                                              (expression
                                                (comparison_expression
                                                  (expression
                                                    (multiplicative_expression
                                                      (expression
                                                        (atom
                                                          (variable
                                                            (symbolic_name
                                                              (unescaped_symbolic_name)))))
                                                      (expression
                                                        (atom
                                                          (literal
                                                            (number_literal
                                                              (integer_literal
                                                                (decimal_integer))))))))
                                                  (expression
                                                    (atom
                                                      (literal
                                                        (number_literal
                                                          (integer_literal
                                                            (decimal_integer))))))))
                                              (expression
                                                (atom
                                                  (function_invocation
                                                    (function_name
                                                      (symbolic_name
                                                        (unescaped_symbolic_name)))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))
                                                    (expression
                                                      (atom
                                                        (literal
                                                          (number_literal
                                                            (integer_literal
                                                              (decimal_integer))))))))))
                                            (case_alternatives
                                              (expression
                                                (comparison_expression
                                                  (expression
                                                    (multiplicative_expression
                                                      (expression
                                                        (atom
                                                          (variable
                                                            (symbolic_name
                                                              (unescaped_symbolic_name)))))
                                                      (expression
                                                        (atom
                                                          (literal
                                                            (number_literal
                                                              (integer_literal
                                                                (decimal_integer))))))))
                                                  (expression
                                                    (atom
